# agent-histograph

./: .gitattributes  .gitignore  README.md  run-histograph.cmd  run-histograph.sh
.github/: CODEOWNERS
agentlog/: README.md  agentlog  agentlog.cmd  agentlog.py  agentlog_read.py  bench_state.py  compact_ledger.py  model_prices.json  serve_cost.py  serve_digest.py  serve_epics.py  serve_http.py  serve_ledger.py  serve_state.py  test_agentlog_read.py  test_compact_ledger.py  test_histograph_smoke.py  test_serve_cost.py  test_serve_digest.py  test_serve_epics.py  test_serve_http.py  test_serve_ledger.py  test_serve_state.py  test_serve_state_perf.py  vendor_aegis.sh
agentlog/desktop/: .gitignore  README.md
agentlog/desktop/src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
agentlog/desktop/src-tauri/capabilities/: default.json  remote.json
agentlog/desktop/src-tauri/icons/: icon.icns
agentlog/desktop/src-tauri/src/: jobobject.rs  lib.rs  main.rs  process_hygiene.rs  sidecar.rs  window.rs
agentlog/desktop/ui/: build.mjs  package.json
agentlog/histograph/: app.css  app.js  index.html  ledger.js  markers.css  render.js  test_attention_cost.mjs  test_digest.mjs  test_empty_state.mjs  test_focus_reconcile.mjs  test_ledger.mjs  test_live_group.mjs  test_next_provenance.mjs  test_transcript.mjs  test_transcript_hierarchy.mjs  test_triage_dismiss.mjs  test_triage_reconcile.mjs  test_zoom.mjs  theme.js  zoom.js
capture-proof/: agentlog_common.py  capture_extract.py  capture_prompt.txt  checkpoint.schema.json  codex-hooks.json  codex_capture_extract.py  codex_common.py  codex_posttooluse.py  codex_precompact_marker.py  codex_pretooluse.py  codex_process_watcher.py  codex_session_start.py  codex_stop_capture.py  gemini_watcher.py  install_hooks.py  posttooluse.py  precompact_marker.py  replay_pilot.py  rubric.py  session_end.py  session_start.py  settings-hooks.json  stop_capture.py  test_capture_quiet.py  test_codex_capture.py  test_gemini_watcher.py  test_install_hooks.py  test_ledger_namespace.py  test_producer_guards.py
docs/swarm/: 2026-06-18-research-gemini-performance.md  2026-06-19-research-histograph-competitive-space.md
(+25 files in other folders)
